# Scratchpad

./: .gitignore
claude/.claude/: settings.local.json
claude/.claude/agents/: playwright-test-healer.md  playwright-test-planner.md
claude/specs/: person.plan.md
claude/tests/: seed.spec.ts
hls_test/: run_synthesis.tcl
hls_test/_ide/: workspace_journal.py
hls_test/mobilenet_final/: dw_conv_accel.cpp
hls_test/mobilenet_hls/solution1/: solution1.aps
hls_test/mobilenet_hls/solution1/.autopilot/: .autopilot_exit
hls_test/mobilenet_hls_ip/: hls_config.cfg
hls_test/mobilenet_ultra_accel/: vitis-comp.json
hls_test/mobilenet_ultra_accel/hls_project/: .cproject  .project
hls_test/mobilenet_ultra_accel/hls_project/.apc/: autopilot.apfmapping
hls_test/mobilenet_ultra_accel/hls_project/solution1/: directives.tcl  solution1.aps  (+1 more)
hls_test/mobilenet_ultra_accel/hls_work/: hls_work.hlsrun_impl_summary
hls_test/mobilenet_vitis_hls/: vitis-comp.json
scratchpad_mobilenet/_ide/: .peers.ini  .vitisPlatformRepo.json  workspace_journal.py  workspace_journal_24248.py  workspace_journal_24416.py  workspace_journal_29632.py  workspace_journal_37648.py  workspace_journal_5440.py
scratchpad_mobilenet/_ide/.wsdata/: .repo.yaml  version.ini
scratchpad_mobilenet/claude/: package-lock.json  package.json
scratchpad_mobilenet/claude/specs/: README.md
scratchpad_mobilenet/hls/memcpy_accel/memcpy_platform/export/memcpy_platform/sw/standalone_psu_cortexa53_0/hw_artifacts/drivers/memcpy_accel_v1_0/src/: CMakeLists.txt  Makefile  xmemcpy_accel.c  xmemcpy_accel.h  xmemcpy_accel_linux.c
scratchpad_mobilenet/hls_test/: hls_config.cfg  setup.tcl
scratchpad_mobilenet/hls_test/_ide/: .peers.ini  workspace_journal_74588.py  workspace_journal_84860.py
scratchpad_mobilenet/hls_test/mobilenet_final/: vitis-comp.json
scratchpad_mobilenet/hls_test/mobilenet_hls/: hls.app
scratchpad_mobilenet/hls_test/mobilenet_hls_ip/: vitis-comp.json
scratchpad_mobilenet/hls_test/mobilenet_ultra_accel/: hls_config.cfg  run_synth.tcl  run_synth_bypass.bat
scratchpad_mobilenet/hls_test/mobilenet_ultra_accel/hls_project/solution1/impl/misc/drivers/mobilenet_block_accel_v1_0/src/: CMakeLists.txt  Makefile  xmobilenet_block_accel_hw.h
scratchpad_mobilenet/hls_test/mobilenet_v24_2/: hls_config.cfg  vitis-comp.json
scratchpad_mobilenet/hls_test/mobilenet_vitis_hls/: hls_config.cfg
scratchpad_mobilenet/zcu104/: debug_fix_report.txt
scratchpad_mobilenet/zcu104/hello_world/: baselin_results.xlsx
work2/: work1.txt
zcu104/hello_world/: baselin_results.csv  run_config.md
zcu104/hello_world/_ide/: .peers.ini  .vitisPlatformRepo.json  workspace_journal_24924.py
zcu104/hello_world/hello_world_app/: vitis-comp.json
zcu104/hello_world/hello_world_platform/: vitis-comp.json
zcu104/hello_world/serial_monitor_logs/: com8_20260212.txt
(+602 files in other folders)
